<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#84A385"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Hello World!"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.244" />-->
    <!--    手机号-->
    <!--    密码-->
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/reg_phone_number"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/phone_num_input"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="53dp"
            android:layout_height="40dp"
            android:text="@string/pwd"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwdin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:hint="@string/pwd_input_hint"
            android:inputType="text|textPassword" />
    </LinearLayout>
    <!--    性别选择-->
    <RadioGroup
        android:id="@+id/sex"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man_radio" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/woman_radio" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/reading_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like1_reading" />

        <CheckBox
            android:id="@+id/play_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like2_ball" />

        <CheckBox
            android:id="@+id/like_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like3_music" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#673AB7"
        android:text="@string/register_text"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>